@@ -262,11 +262,10 @@ context 'AttributeList' do
     assert_equal expected, attributes
   end
 
-  # FIXME this is a negative test that should be updated when the problem is fixed
-  test 'should assign nil to attribute mapped to missing positional attribute' do
+  test 'should not assign nil to attribute mapped to missing positional attribute' do
     attributes = {}
     line = 'alt text,,100'
-    expected = { 1 => 'alt text', 2 => nil, 3 => '100', 'alt' => 'alt text', 'width' => nil, 'height' => '100' }
+    expected = { 1 => 'alt text', 2 => nil, 3 => '100', 'alt' => 'alt text', 'height' => '100' }
     Asciidoctor::AttributeList.new(line).parse_into(attributes, %w(alt width height))
     assert_equal expected, attributes
   end
